[refs #00082] Corrected mediaplugin CSS to fix WSIWYG n player alignment

--- a/style/middleware/_middleware.course-view.scss
+++ b/style/middleware/_middleware.course-view.scss
@@ -52,6 +52,11 @@ span.navbuttontext.prev-span {
   float: right;
 }
 
+// Media Plugin
+div[id="video_player"] .mediaplugin.mediaplugin_videojs {
+  width: 100%;
+}
+
 // Video Plugin
 .video-js {
   background: none;
